refactor(demo): add router to demo-app

--- a/src/demo-app/app/app.component.html
+++ b/src/demo-app/app/app.component.html
@@ -1,112 +1,8 @@
-<div style="text-align:center">
-  <h1>Color Picker DEMO APP</h1>
-</div>
+<mat-toolbar color="primary">
+  <button mat-button routerLink="/color-picker">
+    <mat-icon>colorize</mat-icon>
+    Color Picker
+  </button>
+</mat-toolbar>
 
-<h3>Change used color label</h3>
-<mat-color-picker [usedColorLabel]="'My Colors'">
-  
-  <mat-color-picker-collection [label]="'First Collection'" 
-                               [colors]="colors">
-  </mat-color-picker-collection>
-
-</mat-color-picker>
-
-<hr style="margin: 50px 0;" />
-
-<h3>Colors as objects</h3>
-<mat-color-picker>
-  
-  <mat-color-picker-collection [label]="'First Object Collection'" 
-                               [colors]="items">
-  </mat-color-picker-collection>
-
-</mat-color-picker>
-
-<hr style="margin: 50px 0;" />
-
-<h3>Connect color picker with an input</h3>
-<mat-color-picker matConnectedColorPicker
-                  [matConnectedColorPickerOrigin]="trigger">
-</mat-color-picker>
-
-<form novalidate [formGroup]="form" (ngSubmit)="onSubmit(form)">
-  <mat-form-field>
-    <input matInput matColorPickerOrigin #trigger="matColorPickerOrigin" formControlName="color" />
-  </mat-form-field>
-
-  <button type="submit" mat-raised-button color="primary">Submit <small>(look the console)</small></button>
-</form>
-
-<hr style="margin: 50px 0;" />
-
-<h3 [style.color]="selectedColor">Change color when confirm</h3>
-<mat-color-picker [usedColorLabel]="'My Colors'" (selected)="selectedColor = $event">
-  
-  <mat-color-picker-collection [label]="'First Collection'" 
-                               [colors]="colors">
-  </mat-color-picker-collection>
-
-</mat-color-picker>
-
-<hr style="margin: 50px 0;" />
-
-<h3 [style.color]="changeColor">Change color on change</h3>
-<mat-color-picker [usedColorLabel]="'My Colors'"
-                  [usedSizeColors]="'50'"
-                  (change)="changeColor = $event"
-                  (selected)="changeColor = $event">
-  
-  <mat-color-picker-collection [label]="'First Collection'" 
-                               [colors]="colors">
-  </mat-color-picker-collection>
-
-</mat-color-picker>
-
-<hr style="margin: 50px 0;" />
-
-<h3>Define used colors init value</h3>
-<mat-color-picker [usedColorLabel]="'My Colors'" [usedColorStart]="usedStart">
-  
-  <mat-color-picker-collection [label]="'First Collection'" 
-                               [colors]="colors">
-  </mat-color-picker-collection>
-
-</mat-color-picker>
-
-<hr style="margin: 50px 0;" />
-
-<h3>Hide empty slot of colors</h3>
-<mat-color-picker hideEmptyUsedColors>
-  
-  <mat-color-picker-collection [label]="'First Collection'"
-                               hideEmpty="true"
-                               [colors]="colors">
-  </mat-color-picker-collection>
-
-</mat-color-picker>
-
-<hr style="margin: 50px 0;" />
-
-<h3>Change buttons label</h3>
-<mat-color-picker
-  [btnCancel]="'ESC'"
-  [btnConfirm]="'OK'">
-  
-  <mat-color-picker-collection [label]="'First Collection'"
-                               hideEmpty="true"
-                               [colors]="colors">
-  </mat-color-picker-collection>
-
-</mat-color-picker>
-
-<hr style="margin: 50px 0;" />
-
-<h3>Hide buttons</h3>
-<mat-color-picker hideButtons>
-  
-  <mat-color-picker-collection [label]="'First Collection'"
-                               hideEmpty="true"
-                               [colors]="colors">
-  </mat-color-picker-collection>
-
-</mat-color-picker>
+<router-outlet></router-outlet>
