--- a/src/demo-app/styles.css
+++ b/src/demo-app/styles.css
@@ -1,1 +1,38 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #f5f5f5;
+}
+
+.page-title {
+  font-weight: 600;
+  margin-bottom: 0px;
+}
+
+.page-subtitle {
+  font-size: 13px;
+  margin: 0 0 20px 0;
+}
+
+.page-subtitle span {
+  background: #ccc;
+  padding: 2px;
+  font-weight: 600;
+}
+
+.mat-card {
+  margin-bottom: 30px;
+}
+
+.mat-card-title {
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  font-size: 18px !important;
+}
