feat: implement overlay input

--- a/lib/src/color-picker.component.html
+++ b/lib/src/color-picker.component.html
@@ -1,20 +1,33 @@
-<button type="button" class="btn-picker"
-        cdkOverlayOrigin
-        #trigger="cdkOverlayOrigin"
-        [ngClass]="{ 'empty': selectedColor === 'none' }"
-        [style.background]="selectedColor"
-        (click)="toggle()">
-    <div class="transparent" *ngIf="selectedColor === 'none'"></div>
-</button>
+<!-- color picker overlay -->
+<ng-container *ngIf="overlay">
+    <button type="button" class="btn-picker"
+            cdkOverlayOrigin
+            #trigger="cdkOverlayOrigin"
+            [ngClass]="{ 'empty': selectedColor === 'none' }"
+            [style.background]="selectedColor"
+            (click)="toggle()">
+        <div class="transparent" *ngIf="selectedColor === 'none'"></div>
+    </button>
 
-<ng-template
-    cdkConnectedOverlay
-    hasBackdrop
-    cdkConnectedOverlayBackdropClass="mat-color-picker-backdrop"
-    [cdkConnectedOverlayOrigin]="trigger"
-    [cdkConnectedOverlayOpen]="isOpen"
-    (backdropClick)="backdropClick()">
+    <ng-template
+        cdkConnectedOverlay
+        hasBackdrop
+        cdkConnectedOverlayBackdropClass="mat-color-picker-backdrop"
+        [cdkConnectedOverlayOrigin]="trigger"
+        [cdkConnectedOverlayOpen]="isOpen"
+        (backdropClick)="backdropClick()">
 
+        <ng-template [cdkPortalOutlet]="overlayPanel"></ng-template>
+
+    </ng-template>
+</ng-container>
+
+<!-- color picker flat -->
+<ng-template *ngIf="!overlay" [cdkPortalOutlet]="overlayPanel"></ng-template>
+
+<!-- color picker component content -->
+<ng-template cdkPortal #overlayPanel="cdkPortal">
+    
     <div class="mat-color-picker-overlay mat-elevation-z6"
          role="dialog" aria-label="Color picker">
 
@@ -24,11 +37,11 @@
         </mat-color-picker-selector>
 
         <mat-color-picker-collection [label]="usedColorLabel"
-                                     [size]="usedSizeColors"
-                                     [transparent]="true"
-                                     [hideEmpty]="hideEmpty"
-                                     [colors]="usedColors$ | async"
-                                     (changeColor)="updateTmpSelectedColor($event)">
+                                        [size]="usedSizeColors"
+                                        [transparent]="true"
+                                        [hideEmpty]="hideEmpty"
+                                        [colors]="usedColors$ | async"
+                                        (changeColor)="updateTmpSelectedColor($event)">
         </mat-color-picker-collection>
 
         <ng-content></ng-content>
@@ -38,7 +51,7 @@
             <button mat-button role="button" aria-label="Cancel" (click)="cancelSelection()">
                 {{ btnCancel }}
             </button>
-    
+
             <button mat-button role="button" aria-label="Confirm" (click)="confirmSelectedColor()">
                 {{ btnConfirm }}
             </button>
