--- a/demo-app/src/app/app.component.html
+++ b/demo-app/src/app/app.component.html
@@ -2,6 +2,17 @@
   <h1>Color Picker DEMO APP</h1>
 </div>
 
+<h3 [style.color]="selectedColor">Component without overlay</h3>
+<mat-color-picker [overlay]="false"
+                  [usedColorLabel]="'My Colors'"
+                  (selected)="selectedColor = $event">
+  
+  <mat-color-picker-collection [colors]="colors"></mat-color-picker-collection>
+
+</mat-color-picker>
+
+<hr style="margin: 50px 0;" />
+
 <h3>Change used color label</h3>
 <mat-color-picker [usedColorLabel]="'My Colors'">
   
