feat(demo:color-picker): add icon

--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -1,4 +1,7 @@
-<h1 class="page-title">Color Picker</h1>
+<h1 class="page-title">
+  <mat-icon>colorize</mat-icon>
+  Color Picker
+</h1>
 <p class="page-subtitle">Some examples of how to use the
   <span>mcc-color-picker</span> component</p>
 
