--- a/src/lib/color-picker/color-picker-selector.component.html
+++ b/src/lib/color-picker/color-picker-selector.component.html
@@ -12,13 +12,13 @@
 
 <div class="mcc-color-picker-selector-preview" [style.background]="selectedColor">
 
-    <form [formGroup]="hexForm" *ngIf="hideHexForms()">
+    <form [formGroup]="hexForm" *ngIf="hideHexForms">
         <mat-form-field class="hex-input" floatLabel="always" [ngClass]="textClass">
             <input matInput placeholder="HEX" maxlength="7" formControlName="hexCode" [value]="selectedColor" />
         </mat-form-field>
     </form>
 
-    <form [formGroup]="rgbForm" *ngIf="hideHexForms()">
+    <form [formGroup]="rgbForm" *ngIf="hideHexForms">
         <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
             <input matInput type="number" placeholder="RGB" maxlength="3" formControlName="R" />
         </mat-form-field>
