Adding a ng-container so it can only evaluate one ngIf in the dom

--- a/src/lib/color-picker/color-picker-selector.component.html
+++ b/src/lib/color-picker/color-picker-selector.component.html
@@ -1,9 +1,7 @@
 <div class="mcc-color-picker-selector">
-
     <div #block class="mcc-picker-selector"></div>
     <canvas #blockCanvas height="170" width="230" id="picker"></canvas>
     <div #blockPointer class="mcc-picker-position" style="top: 0px;left: 220px;"></div>
-
 
     <div #stripContainer class="mcc-colors-position" style="background-position-y: 0px;">
         <canvas #strip height="160" width="20" id="colors"></canvas>
@@ -11,23 +9,23 @@
 </div>
 
 <div class="mcc-color-picker-selector-preview" [style.background]="selectedColor">
+    <ng-container *ngIf="!hideForms">
+        <form [formGroup]="hexForm">
+            <mat-form-field class="hex-input" floatLabel="always" [ngClass]="textClass">
+                <input matInput placeholder="HEX" maxlength="7" formControlName="hexCode" [value]="selectedColor" />
+            </mat-form-field>
+        </form>
 
-    <form [formGroup]="hexForm" *ngIf="hideHexForms">
-        <mat-form-field class="hex-input" floatLabel="always" [ngClass]="textClass">
-            <input matInput placeholder="HEX" maxlength="7" formControlName="hexCode" [value]="selectedColor" />
-        </mat-form-field>
-    </form>
-
-    <form [formGroup]="rgbForm" *ngIf="hideHexForms">
-        <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
-            <input matInput type="number" placeholder="RGB" maxlength="3" formControlName="R" />
-        </mat-form-field>
-        <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
-            <input matInput type="number" maxlength="3" formControlName="G" />
-        </mat-form-field>
-        <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
-            <input matInput type="number" maxlength="3" formControlName="B" />
-        </mat-form-field>
-    </form>
-
+        <form [formGroup]="rgbForm">
+            <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
+                <input matInput type="number" placeholder="RGB" maxlength="3" formControlName="R" />
+            </mat-form-field>
+            <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
+                <input matInput type="number" maxlength="3" formControlName="G" />
+            </mat-form-field>
+            <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
+                <input matInput type="number" maxlength="3" formControlName="B" />
+            </mat-form-field>
+        </form>
+    </ng-container>
 </div>
