Adding hideHexForms feature to the demo page

--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -150,6 +150,18 @@
   </mat-card-content>
 </mat-card>
 
+<!-- HIDE HEXADECIMAL COLORS FORM -->
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Hide hex colors form</mat-card-title>
+  </mat-card-header>
+
+  <mat-card-content>
+    <mcc-color-picker [hideHexForms]="true">
+    </mcc-color-picker>
+  </mat-card-content>
+</mat-card>
+
 
 <!-- CHANGE BUTTONS LABEL -->
 <mat-card>
