refactor: remove id

--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -12,7 +12,7 @@
       Overview
     </ng-template>
 
-    <h2 id="mcccolorpicker-module">MccColorPicker</h2>
+    <h2>MccColorPicker</h2>
     <p>When import the
       <code>MccColorPickerModule</code>, you can provide a configuration for the empy value.</p>
 
