--- a/src/demo-app/app/timer-picker/timer-picker.component.html
+++ b/src/demo-app/app/timer-picker/timer-picker.component.html
@@ -5,71 +5,32 @@
 <p class="page-subtitle">Some examples of how to use the
   <span>mcc-timer-picker</span> component</p>
 
-<!-- USING WITH INPUT -->
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>
-      Connect with an input
-    </mat-card-title>
-  </mat-card-header>
+<mat-tab-group>
 
-  <mat-card-content>
-    <form novalidate [formGroup]="form" (ngSubmit)="onSubmit(form)">
-      <mat-form-field>
-        <mcc-timer-picker mccConnectedTimerPicker [mccConnectedTimerPickerOrigin]="inputTrigger"></mcc-timer-picker>
-        <input matInput mccTimerPickerOrigin #inputTrigger="mccTimerPickerOrigin" placeholder="Timer" formControlName="timer" />
-      </mat-form-field>
-    </form>
-  </mat-card-content>
-</mat-card>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      Overview
+    </ng-template>
 
-<!-- USING WITH 24h FORMAT -->
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>
-      Convert value to 24h
-    </mat-card-title>
-  </mat-card-header>
+    <h2>MccTimerPicker</h2>
 
-  <mat-card-content>
-    <form novalidate [formGroup]="form" (ngSubmit)="onSubmit(form)">
-      <mat-form-field>
-        <mcc-timer-picker mccConnectedTimerPicker [mccConnectedTimerPickerOrigin]="formatTrigger" [mccTimerPickerFormat]="'24'"></mcc-timer-picker>
-        <input matInput mccTimerPickerOrigin #formatTrigger="mccTimerPickerOrigin" placeholder="Timer" formControlName="timer" />
-      </mat-form-field>
-    </form>
-  </mat-card-content>
-</mat-card>
+    soon
+  </mat-tab>
 
-<!-- USING WITHOUT BUTTONS -->
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>
-      Hide buttons
-    </mat-card-title>
-  </mat-card-header>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      API
+    </ng-template>
 
-  <mat-card-content>
-    <form novalidate [formGroup]="form" (ngSubmit)="onSubmit(form)">
-      <mat-form-field>
-        <mcc-timer-picker mccConnectedTimerPicker [mccConnectedTimerPickerOrigin]="buttonTrigger" [hideButtons]="true"></mcc-timer-picker>
-        <input matInput mccTimerPickerOrigin #buttonTrigger="mccTimerPickerOrigin" placeholder="Timer" formControlName="timer" />
-      </mat-form-field>
-    </form>
-  </mat-card-content>
-</mat-card>
+    <app-timer-picker-api></app-timer-picker-api>
+  </mat-tab>
 
-<!-- COMPONETN OPENED -->
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>
-      Opened component
-    </mat-card-title>
-  </mat-card-header>
+  <mat-tab label="Examples">
+    <ng-template mat-tab-label>
+      Examples
+    </ng-template>
 
-  <mat-card-content>
+    <app-timer-picker-examples></app-timer-picker-examples>
+  </mat-tab>
 
-    <mcc-timer-picker></mcc-timer-picker>
-
-  </mat-card-content>
-</mat-card>
+</mat-tab-group>
