feat: add timer picker overview

--- a/src/demo-app/app/timer-picker/timer-picker.component.html
+++ b/src/demo-app/app/timer-picker/timer-picker.component.html
@@ -14,7 +14,20 @@
 
     <h2>MccTimerPicker</h2>
 
-    soon
+    <p>This is a implementation of timer picker for material design.</p>
+    <p>To use this component, just import the module from
+      <code>material-community-component</code> package.</p>
+
+    <pre class="code-snippet"><code class="lang-typescript">  <span class="hljs-variable">@NgModule</span>({{ '{' }}
+      ...
+      <span class="hljs-attribute">imports</span>: [
+        MccTimerPickerModule
+      ]
+      ...
+    {{ '}' }})
+  </code>
+</pre>
+
   </mat-tab>
 
   <mat-tab>
