feat(demo): add height example

--- a/src/demo-app/app/color-picker/components/color-picker-examples.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-examples.component.html
@@ -49,6 +49,18 @@
   </mat-card-content>
 </mat-card>
 
+<!-- HEIGHT & USED COLORS SIZE -->
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Change selector height & usedColors size</mat-card-title>
+  </mat-card-header>
+
+  <mat-card-content>
+    <mcc-color-picker colorPickerSelectorHeight="100" usedSizeColors="15" class="mcc-cp-small">
+    </mcc-color-picker>
+  </mat-card-content>
+</mat-card>
+
 <!-- RESET USED COLORS -->
 <mat-card>
   <mat-card-header>
